feat: History 등록(동기) 및 무한 스크롤 조회